--- a/templates/tweets/home.html
+++ b/templates/tweets/home.html
@@ -14,9 +14,10 @@
                 <div class="col s3"></div>
                 <div class="input-field col s6">
                     <input type="hidden" value="/" name="next">
-                    <textarea id="textarea1" class="materialize-textarea" name="content"></textarea>
+                    <textarea  required="required" id="textarea1" class="materialize-textarea" name="content"></textarea>
                     <label for="textarea1">Your Tweet...</label>
                     <button type="submit" class="btn btn-primary">Tweet</button>
+                    <div class="d-none alert alert-danger" id="tweet-create-form-error"></div>
                 </div>
                 <div class="col s3"></div>
             </div>
@@ -33,6 +34,31 @@
         const tweetsElement = document.getElementById("tweets")
         const tweetCreateForm = document.getElementById("tweet-create-form")
 
+        function getCookie(name){
+            name = name.toLowerCase().trim();
+            let cookieValue = null;
+            if(document.cookie && document.cookie !== ''){
+                const cookies = document.cookie.split(';');
+                for(let i = 0; i<cookies.length; i++){
+                    const cookie = cookies[i].trim()
+                    if(cookie.substring(0, name.length + 1) === (name + '=')){
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    }
+                }
+            }
+            return cookieValue;
+        }
+
+        function handleTweetFormError(msg, display){
+            let myErrorDiv = document.getElementById("tweet-create-form-error")
+            if (display === true){
+                myErrorDiv.setAttribute("class", "mt-3 d-block alert alert-danger")
+                myErrorDiv.innerText = msg
+            }else{
+                myErrorDiv.setAttribute("class", "d-none alert alert-danger")
+            }
+        }
+
         function tweetCreateFormDidSubmit(event) {
             event.preventDefault()
             const myForm = event.target
@@ -41,12 +67,40 @@
             const method = myForm.getAttribute("method")
             const xhr = new XMLHttpRequest()
 
+            xhr.responseType = "json"
             xhr.open(method, url)
             xhr.setRequestHeader("HTTP_X_REQUESTED_WITH", "XMLHttpRequest")
             xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest")
             xhr.onload = function (){
-                const serverResponse = xhr.response
-                loadTweets(tweetsElement)
+                if (xhr.status === 201){
+                    handleTweetFormError("", false)
+                    const newTweet = xhr.response
+                    const newTweetElement = formatTweetElement(newTweet)
+                    tweetsElement.innerHTML = newTweetElement + tweetsElement.innerHTML
+                    myForm.reset()
+                } else if(xhr.status === 400){
+                    const errorJson = xhr.response
+                    const contentError = errorJson.content
+                    let contentErrorMsg;
+                    if(contentError){
+                        contentErrorMsg = contentError[0]
+                        if (contentErrorMsg){
+                            handleTweetFormError(contentErrorMsg, true)
+                        }else{
+                            alert("An error occurred. Please try again.")
+                        }
+                    } else {
+                        alert("An error occurred. Please try again.")
+                    }
+                } else if(xhr.status === 403){
+                    alert("You must login!")
+                    window.location.href = '/login'
+                } else if(xhr.status === 500){
+                    alert("There was a server error, please try again")
+                }
+            }
+            xhr.onerror = function(){
+                alert("An error occurred. Please try again later.")
             }
             xhr.send(myFormData)
         }
@@ -61,8 +115,7 @@
             xhr.responseType = "json"
             xhr.open(method, url)
             xhr.onload = function () {
-                const serverResponse = xhr.response
-                let listedItems = serverResponse.response
+                let listedItems = xhr.response
                 let finalTweetStr = ""
                 let i;
                 for (i = 0; i < listedItems.length; i++) {
@@ -76,8 +129,25 @@
 
         loadTweets(tweetsElement)
 
-        function handleDidLike(tweet_id, currentCount) {
+        function handleTweetActionButton(tweet_id, currentCount, action) {
             console.log(tweet_id, currentCount)
+            const csrfToken = getCookie('csrfToken')
+            const url = '/tweets/action/'
+            const method = 'POST'
+            const data = JSON.stringify({
+                id: tweet_id,
+                action: action
+            })
+            const xhr = new XMLHttpRequest()
+            xhr.open(method, url)
+            xhr.setRequestHeader('Content-Type', 'application/json')
+            xhr.setRequestHeader('HTTP_X_REQUESTED_WITH', 'XMLHttpRequest')
+            xhr.setRequestHeader('X-Requested-With', 'XMLHttpRequest')
+            xhr.setRequestHeader('X-CSRFToken', csrfToken)
+            xhr.onload = function(){
+                loadTweets(tweetsElement)
+            }
+            xhr.send(data)
         }
 
         function LikeButton(tweet) {
@@ -88,13 +158,24 @@
                 string = "Like"
             }
 
-            return "<button class='btn btn-primary btn-small' onclick=handleDidLike(" + tweet.id + ","
-                + tweet.likes + ")>" + tweet.likes + " " + string + "</button>"
+            return "<button class='btn btn-primary btn-small' onclick=handleTweetActionButton(" + tweet.id + ","
+                + tweet.likes + ",'like')>" + tweet.likes + " " + string + "</button>"
+        }
+
+        function UnLikeButton(tweet){
+            return "<button class='btn btn-outline-primary btn-small' onclick=handleTweetActionButton(" + tweet.id + ","
+                + tweet.likes + ",'unlike')>Unlike</button>"
+        }
+
+        function RetweetButton(tweet){
+            return "<button class='btn btn-outline-success btn-small' onclick=handleTweetActionButton(" + tweet.id + ","
+                + tweet.likes + ",'retweet')>Retweet</button>"
         }
 
         function formatTweetElement(tweet) {
             return "<div class='col-12 mx-auto border rounded mb-4 py-3 tweet' id='tweet-" + tweet.id + "'><p>"
-                + tweet.content + "</p><div class='btn-group'>" + LikeButton(tweet) + "</div></div>"
+                    + tweet.content + "</p><div class='btn-group'>" + LikeButton(tweet) + UnLikeButton(tweet)
+                    + RetweetButton(tweet) + "</div></div>"
         }
 
     </script>
